style.css
/*** FONTS ***/

@font-face {
    font-family: 'Poppins';
    src: url('assets/fonts/Poppins-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url('assets/fonts/Poppins-Bold.ttf');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url('assets/fonts/Poppins-Italic.ttf');
    font-weight: normal;
    font-style: italic;
}

@font-face {
    font-family: 'Poppins';
    src: url('assets/fonts/Poppins-BoldItalic.ttf');
    font-weight: bold;
    font-style: italic;
}

/*** TAGS ***/

body {
    margin: 0;
    padding: 0;
    line-height: 1.75;
    background-color: white;
}

body div.white {
    background-color: rgba(255, 255, 255, 0.8);
    height: 100%;
    width: 100%;
}

button {
    margin: 10px auto;
    padding: 10px 20px;
    border-radius: 40px;
    background-color: #75d8ff;
    border: none;
    color: black;
    transition: all 0.3s;
}

button:active {
    color: white;
    transition: all 0.3s;
}

button:hover {
    box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.2);
    cursor: pointer;
    transform: scale(1.05);
    transition: all 0.3s;
}

details {
    padding: 10px 30px 0px 30px;
}

h1 {
    font-size: 32px;
    padding-top: 60px;
}

h2 {
    font-size: 24px;
}

h3 {
    font-size: 20px;
}

h4, p, b, i, input, textarea, select, label, button {
    font-size: 16px;
}

header {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 900;
    padding: 1rem 1rem 0 1rem;
    background-image: linear-gradient(white, white, white, rgba(255,255,255,0));
    width: 100%;
    height: 70px;
}

iframe {
    margin: 20px 0px;
    box-shadow: 0 3px 14px rgba(0,0,0,0.4);
    width: 100%;
    min-height: 300px;
    border: none;
    border-radius: 12px;
}

label {
    font-weight: bold;
}

li {
    padding: 5px;
}

main {
    padding: 0 2rem 2rem 2rem;
    max-width: 800px;
    margin: 0 auto;
    min-height: 100vh;
}

section {
    max-width: 700px;
    margin: 0 auto;
}

section div {
    background: none !important;
    display: flex;
    flex-direction: column;
}

select {
    margin: 10px 0;
}

small {
    font-size: 13px;
}

summary {
    list-style-position: outside;
    padding: 0px 0px 10px 20px;
}

textarea {
    width: calc(100% - 30px);
    height: 200px;
    padding: 15px;
    margin: 10px 0;
    resize: vertical;
}

video {
    width: 100%;
    margin: 20px auto;
    box-shadow: 0 3px 14px rgba(0,0,0,0.4);
    border-radius: 12px;
    background: black;
}

body, h1, h2, h3, h4, p, a, button, input, select, textarea, b, i {
    font-family: 'Poppins', BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

h1, h2, h3, h4, button, p.center {
    text-align: center;
}

input, select {
    width: 100%;
    padding: 8px;
    color: black;
    background-color: white;
}

input, select, textarea {
    box-shadow: 0 2px 14px rgba(0,0,0,0.2);
    border: 1px solid #dddddd;
    border-radius: 10px;
}

label, input {
    margin: 5px 0px;
}

ul, ol {
    margin: 0;
}

/*** CLASSES ***/

body.musicStore {
    background-image: url("assets/img/bkgds/musicStore.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.gym {
    background-image: url("assets/img/bkgds/gym.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.restaurant {
    background-image: url("assets/img/bkgds/restaurant.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.home {
    background-image: url("assets/img/bkgds/home.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.townHall {
    background-image: url("assets/img/bkgds/townHall.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.postOffice {
    background-image: url("assets/img/bkgds/postOffice.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.hardwareStore {
    background-image: url("assets/img/bkgds/hardwareStore.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.school {
    background-image: url("assets/img/bkgds/school.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

body.library {
    background-image: url("assets/img/bkgds/library.png");
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

button.inline {
    box-shadow: none;
    cursor: default;
    padding: 5px 20px;
    font-size: 14px;
    margin: 0;
}

button.inline:hover {
    transform: none;
}

button.red {
    background-color: #e74c3c;
}

div.btns button, button.btns, button.copy-btn {
    width: 225px;
    height: 50px;
}

div.li {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    gap: 20px;
}

div.li img.inline.line-start {
    width: 30px !important;
}

iframe.book {
    height: 100vh;
    background-color: white;
}

iframe.feedback {
    width: 100%;
    height: 1500px;
    box-shadow: none;
}

iframe.flashcards {
    height: 600px;
}

img.inline {
    height: 30px;
    object-fit: contain;
}

img.inline.line-start {
    margin: 0 5px 0 0 !important;
}

small img.inline, button.inline img {
    height: 24px;
}

.delete-btn {
    position: absolute;
    top: 10px;
    right: 10px;
    color: white;
    font-size: 14px;
    padding: 5px 10px;
}

.delete-btn:active {
    color: black;
    transition: all 0.3s;
}

.delete-btn img.inline.line-start {
    height: 20px;
    margin: 0 !important;
}

.hidden {
    display: none;
}

.inline {
    display: inline;
    margin: 0px 5px !important;
    vertical-align: middle;
}

.journal-entry {
    padding: 15px;
    margin: 10px 0;
    border-radius: 4px;
    position: relative;
}

.journal-entry small {
    color: #666666;
}

.leaflet-container {
    background-color: #7ed957 !important;
}

.leaflet-marker-icon {
    width: 150px;
    height: 150px;
}

.popup {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.popup button {

    width: 90px;
}

/*** IDS ***/

#building-info {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}

#building-info a {
    max-height: 290px;
}

#building-info div {
    max-width: 350px;
}

#building-info a img {
    margin: 0px 30px;
    max-width: 290px;
    transition: all 0.3s;
}

#building-info a img:hover {
    transform: scale(1.1);
    transition: all 0.3s
}

#date-time {
    position: fixed;
    top: 20px;
    left: 20px;
    z-index: 1000;
    background-color: white;
    border: none;
    border-radius: 10px;
    box-shadow: 0 3px 14px rgba(0,0,0,0.2);
    padding: 10px;
    opacity: 0.7;
}

#final-letter {
    white-space: pre-line; /* For plain text, respects \n for line breaks, collapses other whitespace */
}

#generated-letter {
    background: #f9f9f9;
    border-radius: 5px;
}

#letter-display {
    background: #f9f9f9;
    border-radius: 5px;
}

#letter-form {
    display: grid;
}

#map {
    height: 100vh;
    width: 100vw;
}

#map-nav {
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 1000;
}

#map-nav img {
    width: 50px;
    height: 50px;
    opacity: 0.7;
    transition: all 0.3s;
}

#map-nav img:hover {
    opacity: 1;
    transform: scale(1.1);
    transition: all 0.3s;
}

#playlist-display iframe {
    width: 100%;
    height: 500px;
}

/*** DATA ATTRIBUTES ***/

[data-category="easy"] {
    background: rgb(105, 255, 100);
}

[data-category="medium"], button.yellow {
    background: rgb(255, 211, 92);
}

[data-category="challenging"] {
    background: rgb(255, 146, 146);
}

/*** MEDIA QUERIES ***/

@media print {
    body {
        background: white !important;
        color: black !important;
    }
    #final-letter {
        white-space: pre-line !important;
    }
    #map-nav, div.letter-guides, #letter-form, .no-print {
        display: none !important;
    }
}

@media screen and (max-width: 764px) {
    #building-info div {
        max-width: calc(100vw - 4rem) !important;
    }
    #building-info div p, #building-info div b {
        text-align: center;
    }
    #building-info div div.custom-list {
        margin: auto;
    }
    div.li p {
        text-align: left !important;
    }
}

